tests/ui/imports/import4.stderr
error: cannot determine resolution for the import
  --> $DIR/import4.rs:1:17
   |
LL | mod a { pub use crate::b::foo; }
   |                 ^^^^^^^^^^^^^

error: cannot determine resolution for the import
  --> $DIR/import4.rs:3:17
   |
LL | mod b { pub use crate::a::foo; }
   |                 ^^^^^^^^^^^^^

error[E0432]: unresolved import `crate::b::foo`
  --> $DIR/import4.rs:1:17
   |
LL | mod a { pub use crate::b::foo; }
   |                 ^^^^^^^^^^^^^ no `foo` in `b`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0432`.
